sboinstall, sbotool: norequirements, batch and dry-run.

--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -401,9 +401,6 @@ reverse dependencies.
 
 Incompatible with
 .B
---norequirements\fR\
-\&,
-.B
 --use-template
 and
 .B
@@ -460,11 +457,6 @@ Bypass dependency resolution, but still show
 README
 and the
 user prompts before proceeding with the build.
-
-Incompatible with
-.B
---batch\fR\
-\&.
 .RE
 .P
 .B
@@ -685,10 +677,7 @@ first, which prints the
 --batch
 build queue and exits, to verify the upcoming operation.
 
-Incompatible with
-.B
---norequirements
-and overrides
+Overrides
 .B
 --nointeractive\fR\
 \&.
