--- a/man3/SBO::Lib.3
+++ b/man3/SBO::Lib.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib 3"
-.TH SBO::Lib 3 "Setting Orange, Bureaucracy 21, 3191 YOLD" "" "sbotools 3.8.1"
+.TH SBO::Lib 3 "Boomtime, Bureaucracy 48, 3191 YOLD" "" "sbotools 3.8.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -82,6 +82,9 @@ the build process from setting the queue through post\-build cleaning.
 .IX Subsection "SBO::Lib::Download"
 \&\f(CW\*(C`Download.pm\*(C'\fR downloads, verifies and symlinks any needed source files before building the
 queue begins.
+.SS SBO::Lib::Help
+.IX Subsection "SBO::Lib::Help"
+\&\f(CW\*(C`Help.pm\*(C'\fR has variables with text for the built\-in \fBsbotool\fR\|(1) documentation.
 .SS SBO::Lib::Info
 .IX Subsection "SBO::Lib::Info"
 \&\f(CW\*(C`Info.pm\*(C'\fR sanitizes and parses \f(CW\*(C`info\*(C'\fR files; the information returned is used in version
