sbotool: Quotes, 'Help' polish.

--- a/man1/sbotool.1
+++ b/man1/sbotool.1
@@ -39,7 +39,10 @@ Browse Repository
 or
 .B
 Package Search
-and choose from the list of options in the menu. Installed, upgradable
+and choose from the list of options in the
+.B
+Operations
+menu. Installed, upgradable
 and override scripts can be reached from
 .B
 Installed\fR\
