--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -1,4 +1,4 @@
-.TH sbohints 1 "Setting Orange, Bureaucracy 21, 3191 YOLD" "sbotools 3.8.1" sbotools
+.TH sbohints 1 "Sweetmorn, Bureaucracy 52, 3191 YOLD" "sbotools 4.0_RC" sbotools
 .SH NAME
 .P
 .B
