--- a/man1/sbotool.1
+++ b/man1/sbotool.1
@@ -1,4 +1,4 @@
-.TH sbotools 1 "Setting Orange, Bureaucracy 21, 3191 YOLD" "sbotools 3.8.1" sbotool
+.TH sbotools 1 "Sweetmorn, Bureaucracy 52, 3191 YOLD" "sbotools 4.0_RC" sbotool
 .SH NAME
 .P
 .B
