--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Sweetmorn, Bureaucracy 37, 3191 YOLD" "" "sbotools 3.8.1"
+.TH SBO::Lib::Util 3 "Sweetmorn, Bureaucracy 52, 3191 YOLD" "" "sbotools 4.0_RC"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
