--- a/man5/sbotools.colors.5
+++ b/man5/sbotools.colors.5
@@ -1,4 +1,4 @@
-.TH sbotools.colors 5 "Setting Orange, Bureaucracy 21, 3191 YOLD" "sbotools 3.8.1" sbotools
+.TH sbotools.colors 5 "Sweetmorn, Bureaucracy 52, 3191 YOLD" "sbotools 4.0_RC" sbotools
 .SH NAME
 .P
 .B
