--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -10,14 +10,14 @@ sbotools
 .P
 sboclean [-h|-v]
 .P
-sboclean [-dwi] [-o ALL|package]
+sboclean [-dwi] [-o ALL|package ...]
 .P
 sboclean [--color|--nocolor] [--wrap|--nowrap] ...
 .SH DESCRIPTION
 .P
 .B
 sboclean
-is used to clean files left by
+removes files left by
 .B
 sbotools\fR\
 \&, including:
