--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -67,6 +67,13 @@ each SlackBuild found.
 .RE
 .P
 .B
+-d|--descriptions
+.RS
+Search for SlackBuilds by short description in addition
+to name and tag.
+.RE
+.P
+.B
 -E|--exact-case
 .RS
 Exact matching only (case-sensitive).
