--- a/man1/sbohints.1
+++ b/man1/sbohints.1
@@ -19,7 +19,7 @@ sbohints [--color|--nocolor] [--wrap|--nowrap] ...
 .P
 .B
 sbohints
-is a script for querying and editing script-specific hints in
+queries and edits script-specific hints in
 .B
 sbotools.hints(5)\fR\
 \&. Three
