--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -26,7 +26,7 @@ sboinstall [--color|--nocolor] [--wrap|--nowrap] ...
 .P
 .B
 sboinstall
-is used to install SlackBuilds. If the
+builds and installs SlackBuilds. If the
 .B
 --nointeractive
 flag is not present,
