--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -16,7 +16,7 @@ sboupgrade [--color|--nocolor] [--wrap|--nowrap] ...
 .P
 .B
 sboupgrade
-is used to upgrade SlackBuilds. If the
+builds and upgrades SlackBuilds. If the
 .B
 --nointeractive
 flag is not present,
