Man pages and README.

--- a/man1/sboinstall.1
+++ b/man1/sboinstall.1
@@ -26,10 +26,13 @@ sboinstall [--color|--nocolor] [--wrap|--nowrap] ...
 .P
 .B
 sboinstall
-builds and installs SlackBuilds. If the
+builds and installs SlackBuilds. If neither
 .B
 --nointeractive
-flag is not present,
+nor
+.B
+--norequirements
+is used,
 .B
 sboinstall
 pulls the list of requirements from the
