--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -75,22 +75,22 @@ Interactively remove installed SlackBuilds along with any unused dependencies.
 .RE
 .P
 .B
+sbotool(1)
+.RS
+Perform most
+.B
+sbotools
+operations from this TUI with dynamic
+.B
+dialog(1)
+menus. Calling the commands individually provides superior efficiency and option control.
+.RE
+.P
+.B
 sboupgrade(1)
 .RS
 Upgrade previously-installed SlackBuilds.
 .RE
-.P
-.B
-sbotool(1)
-is a meta-tool providing a TUI based on
-.B
-dialog(1)\fR\
-\&. Most
-.B
-sbotools
-operations can be accomplished through this series of dynamic menus, though calling
-the commands individually from the command line provides superior efficiency and
-fine-tuned option control.
 .P
 By default,
 .B
