--- a/man1/sbotool.1
+++ b/man1/sbotool.1
@@ -1,4 +1,4 @@
-.TH sbotools 1 "Sweetmorn, Bureaucracy 52, 3191 YOLD" "sbotools 4.0_RC" sbotool
+.TH sbotools 1 "Boomtime, Bureaucracy 63, 3191 YOLD" "sbotools 4.0" sbotool
 .SH NAME
 .P
 .B
