--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -1,4 +1,4 @@
-.TH sboclean 1 "Sweetmorn, Bureaucracy 52, 3191 YOLD" "sbotools 4.0_RC" sbotools
+.TH sboclean 1 "Boomtime, Bureaucracy 63, 3191 YOLD" "sbotools 4.0" sbotools
 .SH NAME
 .P
 .B
