--- a/man3/SBO::Lib::Download.3
+++ b/man3/SBO::Lib::Download.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Download 3"
-.TH SBO::Lib::Download 3 "Sweetmorn, Bureaucracy 52, 3191 YOLD" "" "sbotools 4.0_RC"
+.TH SBO::Lib::Download 3 "Boomtime, Bureaucracy 63, 3191 YOLD" "" "sbotools 4.0"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
