--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Sweetmorn, Bureaucracy 52, 3191 YOLD" "sbotools 4.0_RC" sbotools
+.TH sbotools.conf 5 "Boomtime, Bureaucracy 63, 3191 YOLD" "sbotools 4.0" sbotools
 .SH NAME
 .P
 .B
