--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -300,6 +300,32 @@ setting is
 .B
 TRUE\fR\
 \&.
+.P
+Use
+.B
+sbocheck
+with the
+.B
+--perl\fR\
+\&,
+.B
+--python
+and
+.B
+--ruby
+options to check for incompatible
+.I
+SBo
+packages. This is done automatically when running
+.B
+sbocheck
+if the
+.B
+SO_CHECK
+setting is
+.B
+TRUE\fR\
+\&.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
