--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -390,7 +390,21 @@ sbocheck(1)
 and
 .B
 sboupgrade(1)\fR\
-\&.
+\&. Additionally,
+.B
+sbocheck(1)
+searches for incompatible
+.B
+perl\fR\
+\&,
+.B
+python
+and
+.B
+ruby
+.I
+_SBo
+packages.
 .RE
 .P
 .B
