--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Boomtime, Bureaucracy 63, 3191 YOLD" "" "sbotools 4.0"
+.TH SBO::Lib::Util 3 "Boomtime, Bureaucracy 73, 3191 YOLD" "" "sbotools 4.0"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -164,6 +164,17 @@ This file contains a list of scripts that have been renamed and added to Slackwa
 .IX Subsection "@obsolete"
 This array is based on the contents of \f(CW$obs_file\fR. Only \f(CWobsolete_array()\fR should
 interact with \f(CW@obsolete\fR directly; in other situations, make a copy.
+.ie n .SS "($py3ver, $py2ver)"
+.el .SS "($py3ver, \f(CW$py2ver\fP)"
+.IX Subsection "($py3ver, $py2ver)"
+These exported variables contain the major system \f(CW\*(C`python2\*(C'\fR and \f(CW\*(C`python3\*(C'\fR versions
+in the form e.g. \f(CW\*(C`python3.12\*(C'\fR. If \f(CW\*(C`python3\*(C'\fR is not installed, \f(CW$py3ver\fR is equal to
+\&\f(CW$py2ver\fR.
+.ie n .SS $rubyver
+.el .SS \f(CW$rubyver\fP
+.IX Subsection "$rubyver"
+This exported variable contains the major system \f(CW\*(C`ruby\*(C'\fR version, e.g. \f(CW3.4.0\fR for
+\&\f(CW\*(C`ruby\-3.4.6\*(C'\fR.
 .ie n .SS $userland_32
 .el .SS \f(CW$userland_32\fP
 .IX Subsection "$userland_32"
