--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -230,9 +230,12 @@ TRUE\fR\
 Using
 .B
 sboconfig(1)
-without flags enters an interactive settings menu. Each option is explained
-and no changes are made without verification. Using flags is faster, but
-new users may find this a helpful resource.
+without flags enters the
+.B
+sbotool(1)
+settings menu, which shows all available options with explanations. Settings
+changes can be done from here if running as root. Using flags is faster, but
+some users may find this a helpful resource.
 .P
 .B
 sbotools
