Documentation, package test interface.

--- a/man1/sbotool.1
+++ b/man1/sbotool.1
@@ -76,7 +76,7 @@ to view and edit
 .B
 sbotools
 settings.
-Large-scale upgrades, rebuilds and shared object checks can also be done here.
+Large-scale upgrades, rebuilds and package tests can also be done here.
 To act on the
 .B
 Install\fR\
