--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Boomtime, Bureaucracy 73, 3191 YOLD" "" "sbotools 4.0"
+.TH SBO::Lib::Util 3 "Prickle-Prickle, The Aftermath 7, 3191 YOLD" "" "sbotools 4.0"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -164,6 +164,11 @@ This file contains a list of scripts that have been renamed and added to Slackwa
 .IX Subsection "@obsolete"
 This array is based on the contents of \f(CW$obs_file\fR. Only \f(CWobsolete_array()\fR should
 interact with \f(CW@obsolete\fR directly; in other situations, make a copy.
+.ie n .SS "(@py_installed, @py_missing)"
+.el .SS "(@py_installed, \f(CW@py_missing\fP)"
+.IX Subsection "(@py_installed, @py_missing)"
+These exported arrays contain \f(CW\*(C`python\*(C'\fR versions that are installed and needed but
+missing, respectively.
 .ie n .SS "($py3ver, $py2ver)"
 .el .SS "($py3ver, \f(CW$py2ver\fP)"
 .IX Subsection "($py3ver, $py2ver)"
