--- a/man3/SBO::Lib::Pkgs.3
+++ b/man3/SBO::Lib::Pkgs.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Pkgs 3"
-.TH SBO::Lib::Pkgs 3 "Sweetmorn, The Aftermath 4, 3191 YOLD" "" "sbotools 4.0"
+.TH SBO::Lib::Pkgs 3 "Prickle-Prickle, The Aftermath 7, 3191 YOLD" "" "sbotools 4.0"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -120,6 +120,9 @@ versions, full installed package names and creation times of the returned packag
 .PP
 The default behavior is to retain the package lists for future calls; add a true value
 to the arguments to clear them instead. This is irrelevant when running \f(CW\*(C`sbotest\*(C'\fR.
+.PP
+The \f(CW$rubyver\fR variable from \f(CWSBO::Lib::Util(3)\fR is set here when the \f(CW\*(C`ruby\*(C'\fR package
+is evaluated.
 .SS get_local_outdated_versions
 .IX Subsection "get_local_outdated_versions"
 .Vb 1
