--- a/man1/sbotool.1
+++ b/man1/sbotool.1
@@ -1,4 +1,4 @@
-.TH sbotools 1 "Boomtime, Bureaucracy 63, 3191 YOLD" "sbotools 4.0" sbotool
+.TH sbotools 1 "Setting Orange, The Aftermath 8, 3191 YOLD" "sbotools 4.0.1" sbotool
 .SH NAME
 .P
 .B
