--- a/man1/sboclean.1
+++ b/man1/sboclean.1
@@ -1,4 +1,4 @@
-.TH sboclean 1 "Boomtime, Bureaucracy 63, 3191 YOLD" "sbotools 4.0" sbotools
+.TH sboclean 1 "Setting Orange, The Aftermath 8, 3191 YOLD" "sbotools 4.0.1" sbotools
 .SH NAME
 .P
 .B
