--- a/man3/SBO::Lib::Repo.3
+++ b/man3/SBO::Lib::Repo.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Repo 3"
-.TH SBO::Lib::Repo 3 "Boomtime, The Aftermath 5, 3191 YOLD - Maladay" "" "sbotools 4.0"
+.TH SBO::Lib::Repo 3 "Setting Orange, The Aftermath 8, 3191 YOLD" "" "sbotools 4.0.1"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
