--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -1,4 +1,4 @@
-.TH sbotools.hints 5 "Boomtime, Bureaucracy 63, 3191 YOLD" "sbotools 4.0" sbotools
+.TH sbotools.hints 5 "Setting Orange, The Aftermath 8, 3191 YOLD" "sbotools 4.0.1" sbotools
 .SH NAME
 .P
 .B
