--- a/man5/sbotools.conf.5
+++ b/man5/sbotools.conf.5
@@ -152,7 +152,6 @@ sboupgrade(1)\fR\
 .UR keyserver.ubuntu.com
 .UE
 on port 80 is offered if available.
-Only rsync repositories can be verified on Slackware 14.0 and Slackware 14.1.
 .RE
 .P
 .B
@@ -424,8 +423,8 @@ if
 RSYNC_DEFAULT
 is
 .B
-TRUE
-and for Slackware versions prior to 14.2, and
+TRUE\fR\
+\&, and
 .UR https://gitlab.com/SlackBuilds.org
 .UE
 otherwise. The repository must be laid out in the same
